set new path of web

--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,8 @@
             "outputPath": "docs",
             "index": "src/index.html",
             "main": "src/main.ts",
+            "baseHref": "/jwtlink-web-example/",
+
             "polyfills": [
               "zone.js"
             ],
